welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:-6: error: Missing closing brace `}' assumed here
try {
^in1020:1: error: expected class or object definition
def in1020(a:Int, b:Int):Boolean = {
^